Tasks/task27/test_environment/outputs/R2/test_r2_output.txt
popcount_openmp.c: In function ‘main’:
popcount_openmp.c:15:23: error: variable-sized object may not be initialized except with an empty initializer
   15 |     uint32_t vec[n] = {1, 0, 1, 0, 1, 0, 0, 0};
      |                       ^
